--- a/frontend/index.html
+++ b/frontend/index.html
@@ -160,8 +160,8 @@
         </a>
         <p>View it in the collection:</p>
         <a
-          id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          id="mintedLinkBtn"collection
+          href="https://testnets.opensea.io/collection/space-mau-mafia"
           target="_blank"
           rel="noopener noreferrer"
         >
