icons/discord links update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/uJGGMMVe"
+            href="https://discord.gg/DN89Nj6YWY"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -108,7 +108,7 @@
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/uJGGMMVe"
+          href="https://discord.gg/DN89Nj6YWY"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
@@ -161,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"collection
-          href="https://testnets.opensea.io/collection/space-mau-mafia-v2"
+          href="https://opensea.io/collection/space-mau-mafia"
           target="_blank"
           rel="noopener noreferrer"
         >
