--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/maumafiaNFT"
+            href="https://twitter.com/SMMNFT"
             target="_blank"
             rel="noopener noreferrer"
           >
