--- a/frontend/index.html
+++ b/frontend/index.html
@@ -222,7 +222,7 @@
 .button {
   border: none;
   color: white;
-  padding: 16px 32px;
+  padding: 16px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -235,11 +235,11 @@
 .button1 {
   background-color: white;
   color: black;
-  border: 2px solid #4CAF50;
+  border: 2px solid #800000;
 }
 
 .button1:hover {
-  background-color: #4CAF50;
+  background-color: #8d0000;
   color: white;
 }
 
