--- a/frontend/index.html
+++ b/frontend/index.html
@@ -222,7 +222,7 @@
 .button {
   border: none;
   color: white;
-  padding: 16px 16px;
+  padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -247,7 +247,7 @@
 </head>
 <body>
 
-<button class="button button1">Green</button>
+<button class="button button1">Test Button</button>
 
 </body>
 </html>
