--- a/frontend/index.html
+++ b/frontend/index.html
@@ -247,11 +247,11 @@
 </head>
 <body>
 
-  <button id="myButton" class="float-left submit-button" >Test</button>
+  <button id="myButton" class="button button1" >Test</button>
 
   <script type="text/javascript">
       document.getElementById("myButton").onclick = function () {
-          location.href = "Copy-of-Contact-1.css";
+          location.href = "https://website1781277.nicepage.io/Copy-of-Contact-1.html?version=6de92e14-1fef-4564-94e8-623cd0561d39";
       };
   </script>
 
