--- a/frontend/index.html
+++ b/frontend/index.html
@@ -215,34 +215,7 @@
   </body>
 </html>
 
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-.button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {
-  background-color: white;
-  color: black;
-  border: 2px solid #800000;
-}
-
-.button1:hover {
-  background-color: #8d0000;
-  color: white;
-}
-
+<a href="index.html" class="u-border-2 u-border-custom-color-7 u-border-hover-black u-btn u-btn-round u-button-style u-hover-custom-color-1 u-none u-radius-50 u-text-custom-color-7 u-btn-1">Go to 2 page page</a>
 </style>
 </head>
 <body>
