--- a/frontend/index.html
+++ b/frontend/index.html
@@ -251,7 +251,7 @@
 
   <script type="text/javascript">
       document.getElementById("myButton").onclick = function () {
-          location.href = "Copy-of-Contact-1.css";
+          location.href = "nicepage.css";
       };
   </script>
 
