--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <p class="w3-xlarge">Template by w3.css</p>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
 </header>
+<body>
+
+<h1>START PAGE</h1>
+
+<p><a href="https://spacemaumafia.com">Get Started</a></p>
+
+</body>
+</html>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
