--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,59 +66,12 @@
       </div>
     </header>
 
-
-<html>
-<head>
-<style>
-.button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {
-  background-color: white;
-  color: black;
-  border: 2px solid #4CAF50;
-}
-
-.button1:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #008CBA;
-}
-
-.button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
-
-</style>
-</head>
-<body>
-
-<button class="float-left submit-button">Green</button>
-<button class="button button2">Blue</button>
-
-</body>
-</html>
+    
     <button id="myButton" class="float-left submit-button" >Home</button>
 
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "https://www.w3schools.com/w3css/default.asp";
+            location.href = "https://www.w3schools.com/w3css/4/w3.css";
         };
     </script>
 
