--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,7 @@
 
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "https://www.w3schools.com/w3css/4/w3.css";
+            location.href = "W3.CSS Template";
         };
     </script>
 
