--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,14 +66,20 @@
       </div>
     </header>
 
+
+
+
+
     
     <button id="myButton" class="float-left submit-button" >Home</button>
 
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "W3.CSS Template";
+            location.href = "file:///C:/Users/Utente/minter-dapp/frontend/subopage.html";
         };
     </script>
+
+
 
 
 
