--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@
 
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "file:///C:/Users/Utente/minter-dapp/frontend/subopage.html";
+            location.href = "javascript:void(0);";
         };
     </script>
 
