--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,11 +71,11 @@
 
 
     
-    <button id="myButton" class="float-left submit-button" >Home</button>
+    <button class="float-left submit-button" >Home</button>
 
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "javascript:void(0);";
+            location.href = "subopage.html";
         };
     </script>
 
