--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,30 +66,20 @@
       </div>
     </header>
 
-
-
-
-
-    
-    <button class="float-left submit-button" >Home</button>
-
-    <script type="text/javascript">
-        document.getElementById("myButton").onclick = function () {
-            location.href = "subopage.html";
-        };
-    </script>
-
-
-
-
-
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the Space Mau Mafia NFT Project!</h1>
         <p id="welcomeP">
-          
-        </p>
+          Test
+        </pl>
+        <br>
+
+        <br><a href="subopage.html"<button class="wallet-btn btn">
+          <span>Test Button</span> 
+        </button>
+      </a>
+
       </div>
     </section>
 
