--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,8 +100,14 @@
 </head>
 <body>
 
-<button class="button button1">Green</button>
+<button class="button button1">Test</button>
+<button id="Test" class="button button1" >Test</button>
 
+<script type="text/javascript">
+    document.getElementById("myButton").onclick = function () {
+        location.href = "subopage.html";
+    };
+</script>
 </body>
 </html>
 
