--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
 
-<button id="Test" class="button button1" >Test</button>
+<class="wallet-btn" >Test</button>
 
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
