--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,53 +65,25 @@
         </div>
       </div>
     </header>
-
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the Space Mau Mafia NFT Project!</h1>
         <p id="welcomeP">
-          Test
-        </pl>
-        <br>
+          
+        </p>
+
+        <button id="myButton" class="wallet-btn" >Test</button>
+
+        <script type="text/javascript">
+            document.getElementById("myButton").onclick = function () {
+                location.href = "subopage.html";
+            };
+        </script>
+
+
       </div>
     </section>
-
-
-
-
-<html>
-<head>
-<style>
-.button {
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-.button1 {background-color: #4CAF50;} /* Green */
-</style>
-</head>
-<body>
-
-<class="wallet-btn" >Test</button>
-
-<script type="text/javascript">
-    document.getElementById("myButton").onclick = function () {
-        location.href = "subopage.html";
-    };
-</script>
-</body>
-</html>
-
-
-
 
     <section class="container">
       <div class="countdown card">
