--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,10 +74,10 @@
         </p>
       </div>
 
-      <button id="myButton" class="wallet-btn" >Test</button>
+      <button id="connectWallet" class="wallet-btn" >Test</button>
 
       <script type="text/javascript">
-          document.getElementById("myButton").onclick = function () {
+          document.getElementById("connectWallet").onclick = function () {
               location.href = "subopage.html";
           };
       </script>
