--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,18 +72,17 @@
         <p id="welcomeP">
           
         </p>
+
+        <button id="myButton" class="my-btn" >Test</button>
+
+        <script type="text/javascript">
+            document.getElementById("myButton").onclick = function () {
+                location.href = "subopage.html";
+            };
+        </script>
+
+
       </div>
-
-      <button id="actionButton" class="wallet-btn" >Test</button>
-
-      <script type="text/javascript">
-          document.getElementById("actionButton").onclick = function () {
-              location.href = "subopage.html";
-          };
-      </script>
-
-
-
     </section>
 
     <section class="container">
