--- a/frontend/subopage.html
+++ b/frontend/subopage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>W3.CSS Template</title>
+<title>Space Mau Mafia</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -38,9 +38,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">START PAGE</h1>
-  <p class="w3-xlarge">Template by w3.css</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
+  <h1 class="w3-margin w3-jumbo">[SPACE MAU MAFIA]</h1>
+  <p class="w3-xlarge">Mint Now!!</p>
+  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Mint</button>
 </header>
 
 <!-- First Grid -->
@@ -106,23 +106,6 @@ function myFunction() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
-</script>
-
-</body>
-</html>
-
-
-<!DOCTYPE html>
-<html>
-<body>
-
-<h2>Get the current URL</h2>
-
-<p id="demo"></p>
-
-<script>
-document.getElementById("demo").innerHTML = 
-"The full URL of this page is:<br>" + window.location.href;
 </script>
 
 </body>
