--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
           
         </p>
 
-        <button id="myButton" class="my-btn" >Test</button>
+        <button id="myButton" <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Test</button>
 
         <script type="text/javascript">
             document.getElementById("myButton").onclick = function () {
