--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,18 +72,20 @@
         <p id="welcomeP">
           
         </p>
-
-        <button id="myButton" <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Test</button>
-
-        <script type="text/javascript">
-            document.getElementById("myButton").onclick = function () {
-                location.href = "subopage.html";
-            };
-        </script>
-
-
       </div>
     </section>
+
+
+    <button id="myButton" class="my-btn" >Test</button>
+
+    <script type="text/javascript">
+        document.getElementById("myButton").onclick = function () {
+            location.href = "subopage.html";
+        };
+    </script>
+
+
+
 
     <section class="container">
       <div class="countdown card">
