--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,18 +71,29 @@
         <h1 id="welcomeH1">Welcome to the Space Mau Mafia NFT Project!</h1>
         <p id="welcomeP">
           
-        </p>
+        </pl>
+        <br>
+
+        <button id="myButton" button class="wallet-btn btn" >Test</button>
+
+        <script type="text/javascript">
+            document.getElementById("myButton").onclick = function () {
+                location.href = "subopage.html";
+            };
+        </script>
+
+
       </div>
     </section>
 
 
-    <button id="myButton" class="my-btn" >Test</button>
+        <button id="myButton" class="my-btn" >Test</button>
 
-    <script type="text/javascript">
-        document.getElementById("myButton").onclick = function () {
-            location.href = "subopage.html";
-        };
-    </script>
+        <script type="text/javascript">
+            document.getElementById("myButton").onclick = function () {
+                location.href = "subopage.html";
+            };
+        </script>
 
 
 
