--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,10 +74,10 @@
         </pl>
         <br>
 
-        <button id="myButton" button class="wallet-btn btn" >Test</button>
+        <button id="connectWallet" button class="wallet-btn btn" >Test</button>
 
         <script type="text/javascript">
-            document.getElementById("myButton").onclick = function () {
+            document.getElementById("connectWallet").onclick = function () {
                 location.href = "subopage.html";
             };
         </script>
@@ -85,18 +85,6 @@
 
       </div>
     </section>
-
-
-        <button id="myButton" class="my-btn" >Test</button>
-
-        <script type="text/javascript">
-            document.getElementById("myButton").onclick = function () {
-                location.href = "subopage.html";
-            };
-        </script>
-
-
-
 
     <section class="container">
       <div class="countdown card">
