--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the Space Mau Mafia NFT Project!</h1>
-        <p id="welcomeP">
+        <p id="welcomeP">Test button text
           
         </pl>
         <br>
