--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,10 +74,10 @@
         </pl>
         <br>
 
-        <button id="connectWallet" button class="wallet-btn btn" >Test</button>
+        <button id="myButton" button class="wallet-btn btn" >Test</button>
 
         <script type="text/javascript">
-            document.getElementById("connectWallet").onclick = function () {
+            document.getElementById("myButton").onclick = function () {
                 location.href = "subopage.html";
             };
         </script>
