--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,17 +70,62 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the Space Mau Mafia NFT Project!</h1>
         <p id="welcomeP">Test button text
-          
-        </pl>
+           </pl>
         <br>
 
-        <button id="myButton" button class="wallet-btn btn" >Test</button>
+        <!DOCTYPE html>
+<html>
+<head>
+<style>
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
 
-        <script type="text/javascript">
-            document.getElementById("myButton").onclick = function () {
-                location.href = "subopage.html";
-            };
-        </script>
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #008CBA;
+}
+
+.button2:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
+</style>
+</head>
+<body>
+
+<h1>The button element - Styled with CSS</h1>
+
+<p>Use the :hover selector to change the style of the button when you move the mouse over it.</p>
+<p><strong>Tip:</strong> Use the transition-duration property to determine the speed of the "hover" effect:</p>
+
+<button class="button button1">Green</button>
+<button class="button button2">Blue</button>
+
+</body>
+</html>
 
 
       </div>
