discord link update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/DN89Nj6YWY"
+            href="https://discord.gg/5QTm89ZjqR"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -70,45 +70,10 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the Space Mau Mafia NFT Project!</h1>
         <p id="welcomeP">Test button text
-           </pl>
+          
+        </pl>
         <br>
 
-        <!DOCTYPE html>
-<html>
-<head>
-<style>
-.button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #4CAF50;
-}
-
-.button1:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-</style>
-</head>
-<body>
-
-<button class="button button1">Green</button>
-
-</body>
-</html>
 
 
       </div>
@@ -146,7 +111,7 @@
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/DN89Nj6YWY"
+          href="https://discord.gg/5QTm89ZjqR"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
