--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,13 @@
           >
             <img src="images/header/opensea.webp" alt="Opensea" />
           </a>
+          <a
+            href="https://raritysniper.com/nft-drops-calendar"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="images\header\logo2-white.png" alt="NFT Drops" />
+          </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
           </button>
