--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images\header\logo2-white.png" alt="NFT Drops" />
+            <img src="images\header\logo1 v2.png" alt="NFT Drops" />
           </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
