--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,13 @@
           >
             <img src="images\header\logo1 v2.png" alt="NFT Drops" />
           </a>
+          <a
+          href="https://nftcalendar.io/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="images\header\25x25 NFT calendar.png" alt="NFT Calendar" />
+        </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
           </button>
